--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,5 +1,5 @@
 .App{
-    height: 60vh;
+    height: auto;
     padding: 0 100px;
     display: flex;
     align-items: center;
@@ -7,18 +7,26 @@
     text-align: center;
 }
 
-.books{
+/* .books{
     display: flex;
     gap: 10px;
-}
+} */
+
+.books {
+    display: grid;
+    margin-top: 5%;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+  }
 
 .book{
-    flex:1;
+    /* flex:1; */
     display: flex;
     flex-direction: column;
     gap: 10px;
     align-items: center;
 }
+.description, .title{ font-size: 10px;}
 
 img{
     width: 200px;
@@ -81,4 +89,24 @@ input{
 }
 input{ width: 220px;}
 
-/* .search-inner{display: flex;} */
+
+@media (max-width: 500px) {
+    .App {
+      height: auto;
+      padding: 20px;
+    }
+  
+    .books {
+      grid-template-columns: 1fr;
+    }
+  
+    .book {
+      flex-direction: row;
+      align-items: start;
+    }
+  
+    img {
+      max-width: 100px;
+      max-height: 100px;
+    }
+  }
